Update scraper with club-specific times and full year MRMClub

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@ Location: Connolly’s Pub & Restaurant, 121 West 45th St, New York, NY 10036<br
 Link: <a href='https://nybma.org/' target='_blank'>https://nybma.org/</a>
 </li><br>
 <li>
+<b>Manhattan Resident Managers Club</b> — 2025-09-04<br>
+Title: Monthly Meeting<br>
+Location: Connolly’s Pub & Restaurant, 121 West 45th St, New York, NY 10036<br>
+Link: <a href='https://mrmclub.com/' target='_blank'>https://mrmclub.com/</a>
+</li><br>
+<li>
 <b>Manhattan Resident Managers Club</b> — 2025-10-02<br>
 Title: Monthly Meeting<br>
 Location: Connolly’s Pub & Restaurant, 121 West 45th St, New York, NY 10036<br>
@@ -68,6 +74,18 @@ Link: <a href='https://mrmclub.com/' target='_blank'>https://mrmclub.com/</a>
 </li><br>
 <li>
 <b>Manhattan Resident Managers Club</b> — 2026-06-04<br>
+Title: Monthly Meeting<br>
+Location: Connolly’s Pub & Restaurant, 121 West 45th St, New York, NY 10036<br>
+Link: <a href='https://mrmclub.com/' target='_blank'>https://mrmclub.com/</a>
+</li><br>
+<li>
+<b>Manhattan Resident Managers Club</b> — 2026-07-02<br>
+Title: Monthly Meeting<br>
+Location: Connolly’s Pub & Restaurant, 121 West 45th St, New York, NY 10036<br>
+Link: <a href='https://mrmclub.com/' target='_blank'>https://mrmclub.com/</a>
+</li><br>
+<li>
+<b>Manhattan Resident Managers Club</b> — 2026-08-06<br>
 Title: Monthly Meeting<br>
 Location: Connolly’s Pub & Restaurant, 121 West 45th St, New York, NY 10036<br>
 Link: <a href='https://mrmclub.com/' target='_blank'>https://mrmclub.com/</a>
